2009-03-26  Elliott Baron  <ebaron@redhat.com>

	* resources/multiProcTest: New test project.
	* MultiProcessTest.java: New file.
	* AllTests.java (suite): Added MultiProcessTest.

2009-03-25  Elliott Baron  <ebaron@redhat.com>

	* ExportWizardTest.java: New file.
	* AllTests.java (suite): Added ExportWizardTest.

2009-03-18  Elliott Baron  <ebaron@redhat.com>

	* BasicMassifTest.java (setUp): Refactoring from profiling.tests.
	* ChartTests.java (setUp): Likewise.
	* DoubleClickTest.java (setUp): Likewise.
	* LaunchConfigTabTest.java (setUp): Likewise.
	* TreeTest.java (setUp): Likewise.

2009-03-11  Elliott Baron  <ebaron@redhat.com>

	* AbstractMassifTest.java: Pass tool page to superclass.
	* AllTests.java: Added LaunchConfigTabTest to suite.
	* BasicMassifTest.java: Call super on setUp tearDown.
	* ChartTests.java: Likewise.
	* DoubleClickTest.java: Likewise.
	* TreeTest.java: Likewise.
	* LaunchConfigTabTest.java: New file.
	* MassifTestToolPage.java: New file.
	* META-INF/MANIFEST.MF: Added debug.core.model dependency.

2009-02-25  Elliott Baron  <ebaron@redhat.com>

	* valgrindFiles/: Saved output from actual valgrind run. Used for testing
	in environments without Valgrind.
	* build.properties: Added valgrindFiles.
	* META-INF/MANIFEST.MF: New dependencies.
	* AbstractMassifTest.java: Extracted superclass. 
	* BasicMassifTest.java: Use new launch method.
	* DoubleClickTest.java: Likewise.
	* TreeTest.java: Likewise.
	* ChartTests.java: Likewise. New interactivity test.

2009-02-12  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Removed core.util import.
	* AbstractMassifTest.java: Refactoring.
	* ChartTests.java: Refactoring. 
	* DoubleClickTest.java: Modified file comparison.
	* TreeTest.java: Refactoring.

2009-02-03  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Require-Bundle for JUnit < 4.0.0

2009-02-03  Andrew Overholt  <overholt@redhat.com>

	* META-INF/MANIFEST.MF: Move JUnit from Import-package to Require-bundle to see