@@ -1,3 +1,8 @@
+2009-03-31  Elliott Baron  <ebaron@redhat.com>
+
+	* ExpandCollapseTest.java: New file.
+	* AllTests.java (suite): Added ExpandCollapseTest.
+
 2009-03-26  Elliott Baron  <ebaron@redhat.com>
 
 	* resources/multiProcTest: New test project.
